--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "cors": "^2.8.5",
+    "errorhandler": "^1.5.1",
+    "express": "^4.18.1",
+    "morgan": "^1.10.0"
   }
 }
